--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ border:1px solid #E8382F;
 .navbar-nav > li >  ul.map > li {
 	display:block;
 	background:#ffffff;
-	text-align: center;
+	text-align: left;
     padding: 15px 0px;
 }
 .additional-bodered-nav {
