--- a/style/qikuterra/custom-append.css
+++ b/style/qikuterra/custom-append.css
@@ -213,7 +213,7 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
 .navbar-nav > li >  ul.map > li {
     display:block;
     background:#ffffff;
-    text-align: center;
+    text-align: left;
     padding: 15px 0px;
 }
 .additional-bodered-nav {
